--- a/src/main/webapp/mapunia.xhtml
+++ b/src/main/webapp/mapunia.xhtml
@@ -11,12 +11,14 @@
 
 		<ui:define name="content">
 		<script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false"></script>
+		
 			<h:form id="frm">
 				
 				<p:growl id="growl" life="3000" />
  
-    <p:gmap id="gmap" center="-8.437746,-74.590658" zoom="20" type="HYBRID" style="width:100%;height:400px" model="#{mapBean.polylineModel}">
-        <p:ajax event="overlaySelect" listener="#{mapBean.onPolylineSelect}" update="growl" />
+    <p:gmap id="gmap" center="-8.347441,-74.588199" zoom="16" type="ROADMAP" style="width:100%;height:600px" model="#{mapBean.polylineModel}"
+    			 streetView="true">
+        
     </p:gmap>  
 
 
